# video_manager

./: CMakeLists.txt  README.txt  main.cpp  uploader-monitor  uploader-monitor.service  video_uploader
